blog alignment fix

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-post.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-post.scss
@@ -63,10 +63,6 @@
         width: pxToRem(984);
         margin-left: pxToRem(91);
       }
-
-      &__content {
-        width: calc(100% - $spacer * 19);
-      }
     }
   }
 }
