--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-post.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-post.scss
@@ -150,8 +150,6 @@
     }
 
     &__content {
-      width: calc(100% - 160px);
-
       p,
       li {
         font-size: pxToRem(18);
